--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>strings and math,JS</title>
+        <title>ToDo List</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/assets/style/style.css">
         <link rel="stylesheet" href="">
     </head>
-
+    <header class="header">
+        <h1 id="header-text">ToDo List</h1>
+    </header>
 
     <body>
+        <div class="section">
+            <div>
+                <input id="input" type="text" value="Поле для ввода" />
+            </div>
+            <div>
+                <button class="button-add">Добавить</button>
+            </div>
+        </div>
         
-        <script src="" async defer></script>
+        <script src="/assets/style/index.js" async defer></script>
     </body>
 </html>
